syntax = "proto3";

package memos.store;

option go_package = "gen/store";

message InboxMessage {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_MEMO_COMMENT = 1;
    TYPE_VERSION_UPDATE = 2;
  }
  Type type = 1;
  optional int32 activity_id = 2;
}
